--- a/control_interface/css/main.css
+++ b/control_interface/css/main.css
@@ -1,13 +1,12 @@
-html, body {
-  background: #000;
+html,
+body {
+  background: black;
   overflow: hidden;
   width: 100%;
   height: 100%;
   margin: 0px;
   padding: 0px;
 }
-
 canvas {
-  width: 100%;
-  height: 100%;
+  border: 1px solid #333;
 }
