--- a/control_interface/less/main.less
+++ b/control_interface/less/main.less
@@ -1,5 +1,5 @@
 html, body {
-  background: #000;
+  background: black;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -8,6 +8,5 @@ html, body {
 }
 
 canvas {
-  width: 100%;
-  height: 100%;
+  border: 1px solid #333;
 }
