--- a/control_interface/css/main.css
+++ b/control_interface/css/main.css
@@ -6,6 +6,8 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
+  color: white;
+  font-family: sans-serif;
 }
 canvas {
   border: 1px solid #333;
