--- a/beat/interface/styles.css
+++ b/beat/interface/styles.css
@@ -7,6 +7,19 @@ html, body {
   padding: 0px;
 }
 
+body {
+  transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+
+  -moz-transform: scaleY(-1);
+  -o-transform: scaleY(-1);
+  -webkit-transform: scaleY(-1);
+  transform: scaleY(-1);
+  filter: FlipV;
+  -ms-filter: "FlipV";
+}
+
 div {
   float: left;
 }
