--- a/control_interface/less/main.less
+++ b/control_interface/less/main.less
@@ -54,6 +54,13 @@ html, body {
       cursor: pointer;
       opacity: 0;
     }
+
+    .mock-label {
+      position: absolute;
+      background: black;
+      top: 1px;
+      left: 1px;
+    }
   }
 
   .selector-area {
