--- a/control_interface/sass/_devicePreview.scss
+++ b/control_interface/sass/_devicePreview.scss
@@ -1,30 +1,7 @@
-@lighter-color: #333;
-
-html, body {
-  background: black;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  color: white;
-  font-family: sans-serif;
-}
-
-.menu {
-  float: left;
-  height: 100%;
-  width: 200px;
-  background-color: @lighter-color;
-}
-
-.previews {
-  padding: 10px;
-}
-
 .preview-area {
   display: flex;
   justify-content: space-around;
+  margin-bottom: 20px;
 }
 
 .pattern-selector {
@@ -35,7 +12,7 @@ html, body {
     position: relative;
 
     canvas {
-      border: 1px solid @lighter-color;
+      border: 1px solid $lighter-color;
       height: 192px;
     }
 
