--- a/control_interface/sass/_devicePreview.scss
+++ b/control_interface/sass/_devicePreview.scss
@@ -43,7 +43,7 @@
   .selector-area {
     width: 300px;
     max-height: 200px;
-    overflow: scroll;
+    overflow-y: scroll;
 
     select {
       width: 200px;
