hotkey saving and ddf hotkey hacks

--- a/control_interface/templates/side-menu.hbs
+++ b/control_interface/templates/side-menu.hbs
@@ -33,4 +33,9 @@
       </select>
     {{/each}}
   </div>
+  <br>
+  <br>
+  <label>Be Gentle Here:</label>
+  <textarea class="hotkey-export">{{hotkeyString}}</textarea>
+  <button class="hotkey-import">Import Hotkeys</button>
 </div>
